minor href update

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		<!-- I wasn't able to change the size of the actual picture so I used the html attributes-->
 		<h1>Johnson’s Web I Home Page</h1>
 		<h2>Links to my Web I projects</h2>
-		<a href = '../140/project1/index.html'>project1</a><br /> 
-		<a href = '../140/project2/index.html'>project2</a><br />  
+		<a href = '../project1/index.html'>project1</a><br /> 
+		<a href = '../project2/index.html'>project2</a><br />  
 		project3<br /> 
 
 		<div class="first-media-query">My First Media Query</div>
